2002-02-20  Johan Dahlin  <jdahlin@telia.com>

	* bootstrap.py: use version from autoconf2.50 is it exists (which is
	the case on debian systems)

	* jhbuild.py: Add nicer output if the config file isn't found,
	create $PREFIX/share and $PREFIX/share/aclocal if they don't exist

	* module.py: strip out port when checking for cvs server in ~/.cvspass

2002-02-20  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add extra dep for nautilus.  Patch from
	Wan Hing Wah <hingwah@computer.org>.

2002-02-18  Manish Singh  <yosh@gimp.org>

	* jhbuild.py: allow a default list of modules to skip in the
	config file

2002-02-14  Johan Dahlin  <jdahlin@telia.com>

	* moduleinfo.py: make libgnomecanvas depends on gnome-common

2002-02-13  James Henstridge  <james@daa.com.au>

	* moduleinfo.py (head): add tasks gnome-libs, gnome-core and
	desktop (if anyone else has good ideas for tasks, please suggest
	them).
	(head): fix up deps for the split up gnome-core.

	* module.py (Task): simple class for mapping a single name to a
	list of modules to build.
	(ModuleSet.__expand_mod_list): function for expanding a list of
	strings to a list of Module instances.  Takes task objects into
	account.
	(ModuleSet.get_module_list): use __expand_mod_list() to expand
	module lists, so we get task support.

2002-02-13  Xavier Ordoquy <MCArkan@gael.sourceforge.net>

	* moduleinfo.py: changed gnome-core to
	gnome-desktop/panel/session.

2002-02-12  James Henstridge  <james@daa.com.au>

	* moduleinfo.py: add glade (glade-gnome2-branch).

2002-02-05  Gediminas Paulauskas <menesis@delfi.lt>

	*  moduleinfo.py (head): add gnome-media, bug-buddy, gnome-games;
	remove libcapplet; fix gal

2002-02-01  Havoc Pennington  <hp@pobox.com>

	* Makefile (bindir): use a "bindir" variable so "make install
	bindir=/foo" works

	* jhbuild.py (do_build): if passing extra args to build mode, 
	take them as a list of modules to build

	* moduleinfo.py (head): make metacity depend on gconf
