@@ -1,3 +1,9 @@
+2002-02-20  James Henstridge  <james@daa.com.au>
+
+	* module.py (BuildScript.login): make python 1.5 compatible.  And
+	make it work with both new and old style lines in the .cvspass
+	file.
+
 2002-02-20  Johan Dahlin  <jdahlin@telia.com>
 
 	* bootstrap.py: use version from autoconf2.50 is it exists (which is
